[package]
name = "ecs_bench_suite"
version = "0.1.0"
authors = ["Kevin Feng", "Thomas Gillen <thomas.gillen@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.5.0"
bevy_tasks = "0.5.0"
bincode = "1.3"
cgmath = { version = "0.17", features = ["serde"] }
ecstasy = { git = "https://github.com/segfaultgames/ecstasy.git" }
hecs = { version = "0.5", features = ["column-serialize", "row-serialize"] }
legion = "0.3"
planck_ecs = { version = "1.1.0", features = ["parallel"] }
rayon = "1.3"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
shipyard = "0.5.0"
specs = {version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rayon = "1.3"

[[bench]]
name = "benchmarks"
harness = false
